scenarios/argocd/fakenodes/eks/istio/virtual-services/vs-vcluster-eks-122.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-eks-122
  namespace: eks
spec:
  hosts:
  - "vcluster-eks-122.172.27.0.3.nip.io"
  gateways:
  - istio-ingress/vcluster-eks
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-eks-122.172.27.0.3.nip.io"
    route:
    - destination:
        host: vcluster-eks-122
        port:
          number: 443
